[package]
name = "pafcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.2"
rust-htslib = "0.38"
anyhow = "1.0"
tempfile = "3.2"
thiserror = "1.0"

[dev-dependencies]

[[bin]]
bench = false
path = "src/main.rs"
name = "pafcheck"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[[test]]
name = "validation"
path = "tests/validation_tests.rs"
